--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -343,7 +343,8 @@ then something like,
 T (Struct 'atom' [Abox, T (Cut 0)])
 \end{minted}
    
-is possible. Since we needed the fixed point of the language we used \textit{Fix} but generically one could add multiple custom functionality.  
+is possible. Since we needed the fixed point of the language we used \textit{Fix} but generically one could add multiple custom 
+functionality.  
 
 \end{enumerate}  
 
