--- a/toDo.tex
+++ b/toDo.tex
@@ -38,6 +38,9 @@
 \item [\textbf{Mehul}]
 
 \item
+  Justify the use of capitals in ``Functional styles of programming''.
+  Minimally, say what rules you are using.
+\item
   Chapter 13.5 needs fleshing out.
 
 \item
