small change to proto1

--- a/proto1.tex
+++ b/proto1.tex
@@ -418,6 +418,11 @@ functionality.
 Our language now opened up and ready for expansion, still needs to conform to the requirements of the \cite{unification-fd-lib} so that the
 generic unification algorithm upon customization works with it.
 
+The library provides functionalities such as first-order structural unification over general structure types along with mutable variable 
+bindings.
+
+
+
 
 
 Creating instances,
