Recompiled on lab machine

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -370,7 +370,7 @@
   \begin{singlespace}
   \setlength{\parskip}{12pt plus 2pt minus 1pt}
   \theendnotes
-  \par
+  \parz
   \end{singlespace}
 \end{scope}
 
