added unification fd content to proto 1, addresed a few notes

--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -20,8 +20,8 @@ objectives is to implement monadic unification using the library \cite{unificati
 
 
 \section{Unifiable Data Structures}
-For a data type to be Unifiable, it must have instances of Functor, Foldable and Traversable. The interaction between different classes is depicted in figure 
-\ref{fig:Functor Hierarchy}.
+For a data type to be Unifiable, it must have instances of Functor, Foldable and Traversable. The interaction between different classes is 
+depicted in figure \ref{fig:Functor Hierarchy}.
 
 \begin{figure}[th]
 \centering
