--- a/introduction.tex
+++ b/introduction.tex
@@ -10,7 +10,7 @@
 
 \section{What is this chapter about}
 
-This chapter introduces the scope of the thesis along with the preliminary arguments{\Huge\textcolor{red}{.}}
+This chapter introduces the scope of the thesis along with the preliminary arguments.
 
 
 -----------------------------------------------------------------------------
@@ -25,21 +25,28 @@ to utilise their true potential, one must go deeper and communicate with them. T
 
 Programming has become an integral part of working and interacting with computers and day by day more and more complex
 problems are being tackled using the power of programming technologies.
+
+\begin{comment}
 It is possibly the only way to talk to computers and hence the need for a robust and multi purpose programming language
 has never been more urgent.\endnote{%
   This argument for the need for robust, multi-purpose languages seems weak.
   Can we either drop it, or extend it somewhat?
 }
+\end{comment}
+
+A programming language must not only provide an easy to use environment but also adaptability towards the problem domain. 
+\begin{comment}
 The desirability of a programming language depends on a lot of factors such as the ease of use, the features and
 functionalities that it provides, adaptability and what sort of problems \yyy{can it}{it can} solve.
 One is spoilt for choice with a number of options for a wide variety of programming paradigms, for example Object
 Oriented Languages.\endnote{%
   Rewrite this sentence.
 }
+\end{comment}
 
 Over the last decade the declarative style of programming has gained popularity.
 The methodologies that have stood out are the Functional and Logical Approaches.\endnote{%
-  What style guide are you using to determine capitalization?
+  What style guide are you using to determine capitalization? none at the moment
 }
 The former is based on Functions and Lambda Calculus, while the latter is based on Horn Clause Logic.
 Each of them has its own advantages and ﬂaws.
@@ -47,7 +54,8 @@ How does one choose which approach to adopt?
 Perhaps one does not need to choose!
 This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a Purely
 Functional Programming Language and \progLang{Prolog}, a Logical Programming Language so that one is not forced to
-choose.\endnote{%
+choose. The task at hand involves replicating \progLang{Prolog} like features in \progLang{Haskell} such as unification and a single 
+typed system.\endnote{%
   Say more here?
   This seems like a natural place to have more high-level comments on where the thesis is going.
 }
@@ -70,6 +78,10 @@ capabilities.
 Over the years the development of programming languages has become more and more rapid.
 Today the number of is in the thousands and counting.\endnote{%
   Reference?  How did you come up with this estimate?
+
+https://en.wikipedia.org/wiki/Timeline\_of\_programming\_languages
+
+http://www.thesoftwareguild.com/history-of-programming-languages/ 
 }
 The successors attempt to introduce new concepts and features to simplify the process of coding a solution and assist
 the programmer by lessening the burden of carrying out standard tasks and procedures.
@@ -83,6 +95,8 @@ switch.\endnote{%
   I believe that you want to link this \P{} to the idea that embedded or merged languages are good, but I don't see
   where you do that.
 }
+One other approach would be to replicate target features exhibited by a language in the one that is present one to avoid the hassle of 
+jumping between the two more commonly known as an embedded or a foreign function interface.
 
 \begin{comment}
 \par \progLang{Prolog} has a similar story. It was born in an era where procedural programming had made everyone notice their presence. Talking about 
@@ -99,7 +113,7 @@ for search problems.
 
 \progLang{Prolog} is a language that has a hard time being adopted.
 Born in an era where procedural languages were receiving a lot of attention, it \xxx{suﬀered}{suffered}\endnote{%
-  this looks like it has been cut and paste
+  this looks like it has been cut and paste, not so sure
 } from competing against another
 new kid on the block: \progLang{C}.
 Some of the problems were of its own making.
@@ -124,8 +138,11 @@ Approaching towards the solution can be complicated and tiresome, but the progra
 master key.\endnote{%
   The idea of this sentence is good, but the wording needs improvement.
 }%
+A general purpose language, as the name suggests provides a general set of tools to cover many problem domains. The downside is that such
+environments lack focus and approaching towards the solution can be complicated and tiresome.   
 
-Flipping the coin to the other side\yyy{}{,} we see\xxx{,} the more specific the language is to the problem domain\yyy{}{,} the easier it
+
+Flipping the coin to the other side, we see, the more specific the language is to the problem domain, the easier it
 is to solve the problem.
 The simple reason being that, the problem need not be moulded according to the capability  of the
 language.\endnote{%
@@ -133,7 +150,7 @@ language.\endnote{%
 }\elabel{not-a-sentence}
 For example\yyy{}{,} a problem with a naturally recursive solution cannot take advantage of tail recursion in many
 imperative languages.
-Many problems require the system to be mutation free, but have to deal with uncontrolled side-effects and so
+Many domains require the system to be mutation free, but must deal with uncontrolled side-effects and so
 on.\endnote{%
   This example isn't as clear to me as the one in the last sentence.
 }\textsuperscript{,}\endnote{%
@@ -145,9 +162,12 @@ but nothing else, resulting in choosing a different language every time.
 On the other hand, a general purpose language can be used for solving a wide variety of problems but \yyy{many a times,}{often}
 the programmer ends up writing some code dictated by the language rather than the problem.
 
-\par The solution, a programming language with a split personality, in our case, sometimes functional, sometimes logical and sometimes both.\eref{not-a-sentence} 
-Depending upon the problem, the language shapes itself accordingly and exhibits the desired characteristics. The ideal situation is a language with a rich 
-feature set and the ability to mould itself according to the problem. A language with ability to take the appropriate skill set and present it to the 
+\par The solution, a programming language with a split personality, in our case, sometimes functional, sometimes logical and sometimes 
+both.\eref{not-a-sentence} 
+Depending upon the problem, the language shapes itself accordingly and exhibits the desired characteristics. The ideal situation is a 
+language with a rich 
+feature set and the ability to mould itself according to the problem. A language with ability to take the appropriate skill set and present 
+it to the 
 programmer, which will reduce the hassle of jumping between languages or forcibly trying to solve a problem according to a paradigm.\eref{not-a-sentence}
 
 \par The subject in question here is \progLang{Haskell} and the split personality being \progLang{Prolog}. How far can \progLang{Haskell} be pushed to 
