--- a/proto1.tex
+++ b/proto1.tex
@@ -413,30 +413,84 @@ functionality.
  
 
 
-\section{Working with the language}
+\section{Working with the language / Making language compatible with unification-fd}
 
-Our language now opened up and ready for expansion, still needs to conform to the requirements of the \cite{unification-fd-lib} so that the
-generic unification algorithm upon customization works with it.
+Our language now opened up and is ready for expansion but it still needs to conform to the requirements of the \cite{unification-fd-lib} 
+library so that the generic unification algorithm upon customization works with it.
 
-The library provides functionalities such as first-order structural unification over general structure types along with mutable variable 
+The library provides functionality for first-order structural unification over general structure types along with mutable variable 
 bindings.
 
+In this section we discuss
+\begin{enumerate}
+\item Functor Hierarchy.
+
+\item Required instances the language must have.
+
+\item Mutable variables.
+
+\item Variable Bindings.
+ 
+\item Monadic Unification.
+
+\item Replicating \progLang{Prolog} unification in \progLang{Haskell} 
+\end{enumerate}
+
+Classes in \progLang{Haskell} are like containers with certain properties which can be thought of as functions. When a data type creates an
+instance of a class the function(s) can be applied to each element / primitive in the data type.    
 
 
+The data here is the \progLang{Prolog} abstract syntax and the containers are \textit{Functor, Foldable, Traversable, Applicative} 
+and \textit{Monad}.     
 
+\clearpage
 
-Creating instances,
+Below \ref{fig:Functor Hierarchy} shows the relation between the different classes.
+
+\begin{figure}[th]
+\centering
+\includegraphics[scale = 0.7]{FunctorHierarchy.png}
+\caption{Functor Hierarchy \cite{website:foldablenadtraversable}}
+\label{fig:Functor Hierarchy}
+\end{figure}  
+
+The Functor and Foldable instances providing functions for applying map-reduce to the data structure. The primary issue is that at the end 
+of the operation the structure if the data type is lost which would not help our cause since the result of a query must be a list of 
+substitutions which are essential pairs of language variable with language values(language constructs). 
+
+Enter, Traversable, it allows reduce whilst preserving the shape of the structure. Lastly, the Applicative instance is an intermediate 
+between a functor and a monad. 
+
+We create the necessary instances as follows,
 \begin{minted}[linenos]{haskell}
 instance Functor (FlatTerm) where
 	fmap = T.fmapDefault
+
 instance Foldable (FlatTerm) where
  	foldMap = T.foldMapDefault
+
 instance Traversable (FlatTerm) where
   	traverse f (Struct atom x)	=	Struct atom <$> 
   				sequenceA (Prelude.map f x)
   	traverse _ (Var v)	=	pure (Var v)
   	traverse _ Wildcard	=	pure (Wildcard)
   	traverse _ (Cut i)	= 	pure (Cut i)
+
+instance Applicative (FlatTerm) where
+	pure x = Struct "" [x] 
+	_ <*> Wildcard	= 	Wildcard
+	_ <*> (Cut i) 	= 	Cut i
+	_ <*> (Var v)	=	(Var v)
+	(Struct a fs) <*> (Struct b xs) = Struct (a ++ b) [f x | f <- fs, x <- xs] 
+\end{minted}
+
+The above lay the foundation to work with the library. Coming back to the library, the language must have the Unifiable instance. This works
+in tandom with the UTerm. The UTerm data type captures the recursive structure of logic terms i.e, given some functor t which describes the 
+constructors of our logic terms, and some type v which describes our logic variables, the type UTerm t v is the type of logic terms: trees 
+with multiple layers of t structure and leaves of type v. The Unifiable class gives one step of the unification process. Just as we only need to specify one level of the ADT (i.e., T) and then we can use the library's UTerm to generate the recursive ADT, so too we only need to specify one level of the unification (i.e., zipMatch) and then we can use the library's operators to perform the recursive unification, subsumption, etc
+
+\begin{minted}[linenos]{haskell}
+
 instance Unifiable (FlatTerm) where
 	zipMatch (Struct al ls) (Struct ar rs) = 
 		if (al == ar) && (length ls == length rs) 
@@ -448,18 +502,154 @@ instance Unifiable (FlatTerm) where
 	zipMatch (Cut i1) (Cut i2) = if (i1 == i2) 
 		then Just (Cut i1) 
 		else Nothing
-instance Applicative (FlatTerm) where
-	pure x = Struct "" [x] 
-	_ <*> Wildcard	= 	Wildcard
-	_ <*> (Cut i) 	= 	Cut i
-	_ <*> (Var v)	=	(Var v)
-	(Struct a fs) <*> (Struct b xs) = Struct (a ++ b) [f x | f <- fs, x <- xs] 
+
 \end{minted}
 
-After flattening do fixing,
- 
+Logic Variables
 
-Opening up the language somehow so as to accommodate your own variables.
+The library ships with two implementations of logic variables. The IntVar implementation uses Int as the names of variables, and uses an 
+IntMap to keep track of the environment. The STVar implementation uses STRefs, so we can use actual mutation for binding logic variables, 
+rather than keeping an explicit environment around. This implementation uses STVars.
+
+Performing unification has the side effect of binding logic variables to terms. Thus, we'll want to use a monad in order to keep track of 
+these effects. The BindingMonad type class provides the definition of what we need from our ambient monad. In particular, we need to be 
+able to generate fresh logic variables, to bind logic variables, and to lookup what our logic variables are bound to. The library provides 
+the necessary instances for both IntVar and STVar.
+
+You can provide your own implementations of Variable and BindingMonad.
+
+
+For our language expressions to be unifiable we must deal with the variables in the expressions being compared. For that we extract the 
+variables and then convert them into a dictionary consisting of a free variable for each language variable.
+
+\begin{minted}[linenos]{haskell}
+variableExtractor :: Fix FlatTerm -> [Fix FlatTerm]
+variableExtractor (Fix x) = case x of
+	(Struct _ xs) 	->	Prelude.concat $ Prelude.map variableExtractor xs
+	(Var v)			->	[Fix $ Var v]
+	_				->	[] 
+
+variableNameExtractor :: Fix FlatTerm -> [VariableName]
+variableNameExtractor (Fix x) = case x of
+	(Struct _ xs)	-> Prelude.concat $ Prelude.map variableNameExtractor xs
+	(Var v)			-> [v]
+	_ 				-> []	
+
+variableSet :: [Fix FlatTerm] -> S.Set (Fix FlatTerm)
+variableSet a = S.fromList a
+
+variableNameSet :: [VariableName] -> S.Set (VariableName)
+variableNameSet a = S.fromList a
+
+varsToDictM :: (Ord a, Unifiable t) =>
+    S.Set a -> ST.STBinding s (Map a (ST.STVar s t))
+varsToDictM set = foldrM addElt Map.empty set where
+  addElt sv dict = do
+    iv <- freeVar
+    return $! Map.insert sv iv dict
+\end{minted}
+
+
+The next step would wrap the language terms into a UTerm,
+\begin{minted}[linenos]{haskell}
+uTermify 
+  :: Map VariableName (ST.STVar s (FlatTerm)) 
+  -> UTerm FlatTerm (ST.STVar s (FlatTerm)) 
+  -> UTerm FlatTerm (ST.STVar s (FlatTerm))
+uTermify varMap ux = case ux of
+  UT.UVar _          		-> ux
+  UT.UTerm (Var v)  		-> maybe (error "bad map") UT.UVar $ Map.lookup v varMap
+ -- UT.UTerm t         		-> UT.UTerm $! fmap (uTermify varMap) 
+  UT.UTerm (Struct a xs)	-> UT.UTerm $ Struct a $! fmap (uTermify varMap) xs  	
+  UT.UTerm (Wildcard)		-> UT.UTerm Wildcard
+  UT.UTerm (Cut i)			-> UT.UTerm (Cut i)
+
+translateToUTerm ::
+    Fix FlatTerm -> ST.STBinding s
+            (UT.UTerm (FlatTerm) (ST.STVar s (FlatTerm)),
+             Map VariableName (ST.STVar s (FlatTerm)))
+translateToUTerm e1Term = do
+  let vs = variableNameSet $ variableNameExtractor e1Term
+  varMap <- varsToDictM vs
+  let t2 = uTermify varMap . unfreeze $ e1Term
+  return (t2,varMap)
+\end{minted}
+
+and for later use to convert them back,
+
+\begin{minted}[linenos]{haskell}
+vTermify :: Map Int VariableName ->
+            UT.UTerm (FlatTerm) (ST.STVar s (FlatTerm)) ->
+            UT.UTerm (FlatTerm) (ST.STVar s (FlatTerm))
+vTermify dict t1 = case t1 of
+  UT.UVar x  -> maybe (error "logic") (UT.UTerm . Var) $ Map.lookup (UT.getVarID x) dict
+  UT.UTerm r ->
+    case r of
+      Var iv   -> t1
+      _         -> UT.UTerm . fmap (vTermify dict) $ r
+
+translateFromUTerm :: 
+    Map VariableName (ST.STVar s (FlatTerm)) ->
+    UT.UTerm (FlatTerm) (ST.STVar s (FlatTerm)) -> Prolog
+translateFromUTerm dict uTerm =
+  P .  maybe (error "Logic") id . freeze . vTermify varIdDict $ uTerm where
+    forKV dict initial fn = Map.foldlWithKey' (\a k v -> fn k v a) initial dict
+    varIdDict = forKV dict Map.empty $ \ k v -> Map.insert (UT.getVarID v) k
+\end{minted}
+
+Unification 
+
+Starting from scratch each of the two language expressions needs to be functorized and then translated to UTerms 
+
+\begin{minted}[linenos]{haskell}
+monadicUnification :: (BindingMonad FlatTerm (STVar s FlatTerm) (ST.STBinding s)) => (forall s. ((Fix FlatTerm) -> (Fix FlatTerm) -> 
+  ErrorT (UT.UFailure (FlatTerm) (ST.STVar s (FlatTerm)))
+           (ST.STBinding s) (UT.UTerm (FlatTerm) (ST.STVar s (FlatTerm)),
+            Map VariableName (ST.STVar s (FlatTerm)))))
+monadicUnification t1 t2 = do
+--  let
+--    t1f = termFlattener t1
+--    t2f = termFlattener t2
+  (x1,d1) <- lift . translateToUTerm $ t1
+  (x2,d2) <- lift . translateToUTerm $ t2
+  x3 <- U.unify x1 x2
+  --get state from somehwere, state -> dict
+  return $! (x3, d1 `Map.union` d2)
+
+goUnify ::
+  (forall s. (BindingMonad FlatTerm (STVar s FlatTerm) (ST.STBinding s))
+  =>
+      (ErrorT
+          (UT.UFailure FlatTerm (ST.STVar s FlatTerm))
+          (ST.STBinding s)
+          (UT.UTerm FlatTerm (ST.STVar s FlatTerm),
+             Map VariableName (ST.STVar s FlatTerm)))
+     )
+  -> [(VariableName, Prolog)]
+goUnify test = ST.runSTBinding $ do
+  answer <- runErrorT $ test --ERROR
+  case answer of
+    (Left _)            -> return []
+    (Right (_, dict))   -> f1 dict
+
+
+f1 ::
+  (BindingMonad FlatTerm (STVar s FlatTerm) (ST.STBinding s))
+  => (forall s. Map VariableName (STVar s FlatTerm)
+      -> (ST.STBinding s [(VariableName, Prolog)])
+     )
+f1 dict = do
+  let ld1 = Map.toList dict
+  ld2 <- Control.Monad.Error.sequence [ v1 | (k,v) <- ld1, let v1 = UT.lookupVar v]
+  let ld3 = [ (k,v) | ((k,_),Just v) <- ld1 `zip` ld2]
+      ld4 = [ (k,v) | (k,v2) <- ld3, let v = translateFromUTerm dict v2 ]
+  return ld4
+\end{minted}
+
+
+
+
+\begin{comment}
 
 \section{Black box}
 
@@ -631,7 +821,7 @@ f1 dict = do
 \end{figure}
 
 \end{enumerate}
-
+\end{comment}
 
 \section{Chapter Recap}
 
