rebase issue commit

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -303,11 +303,11 @@
 %	\subfile{eplipl}	
 %	\clearpage
 		
-	\subfile{prologin}
-	\clearpage
+%	\subfile{prologin}
+%	\clearpage
 			
-	\subfile{prologinhaskell}
-	\clearpage
+%	\subfile{prologinhaskell}
+%	\clearpage
 		
 %	\subfile{ummcpp}
 %	\clearpage
