--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -52,7 +52,7 @@
 \externaldocument{workCompleted}
 
 %\newcommand{\chapterReference}[1]{\textcolor{blue} {\nameref{#1} } }
-\renewcommand\makeenmark{\hbox{\textcolor{red}{$^{\theenmark$}}}}
+\renewcommand\makeenmark{\hbox{\textcolor{red}{$^{\theenmark}$}}}
 \newsavebox\xXx
 \newcommand{\xxx}[1]{\savebox\xXx{#1}#1\kern-1.0\wd\xXx\textcolor{red}{\rule[0.7ex]{\wd\xXx}{1pt}}%
   \kern-1.0\wd\xXx\textcolor{red}{\rule[0.25ex]{\wd\xXx}{1pt}}%
