minor style changes.

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -9,6 +9,7 @@
 
 % This is nice for source code listings
 % \usepackage{listings}
+\usepackage{amsmath}
 \usepackage{comment}
 \usepackage{subfiles}
 
@@ -30,7 +31,7 @@
 \usepackage{fancyvrb}
 \usepackage{paralist}
 
-\hyphenation{pro-gram-ming pa-ra-digm}
+\hyphenation{pro-gram-ming pa-ra-digm pa-ra-digms}
 
 
 \externaldocument{background}
