--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -359,10 +359,10 @@ x \cdot y + x \cdot z
 Once the language is 'functorized' one can add quantifiers and logic to the language to do something like,
 
 
-\begin{math}
-\forall x \forall y \forall z \qquad x \cdot y + x \cdot z \newline
-\hfill   = x \cdot (y + z)	
-\end{math}
+\begin{align}
+  \forall x \forall y & \forall z & x \cdot y + x \cdot z \\
+  = & x \cdot (y + z)	
+\end{align}
 
 \item Multiple modifications
 
